--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="row col-md-12" id="prompt-container">
 			<div class="row col-xs-12" id="yellow-block"></div>
 			<div class="row col-lg-12" id="sentence"></div>
-			<div class="row col-lg-12 text-center" id="feedback"></div>
+			<div class="row col-lg-12" id="feedback"></div>
 			<div class="row col-lg-12 text-center" id="target-letter"></div>
 		</div>
 		<div class="text-center keyboard-container" id="keyboard-upper-container">
