--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<div class="row col-lg-12" id="sentence"></div>
 			<div class="row col-lg-12" id="feedback"></div>
 			<div class="row col-lg-12 text-center" id="target-letter"></div>
+			<div class="row col-lg-12 text-center" id="score"></div>
 		</div>
 		<div class="text-center keyboard-container" id="keyboard-upper-container">
 			<div class="row col-lg-12 keys-row">
